# gittry

./: Cargo.toml  README.md  feature.txt
src/: fetch.rs  lib.rs
tests/: repos_list_mock.json  test_fetch_repos.rs
